--- a/FrontEnd/src/css/terminal.css
+++ b/FrontEnd/src/css/terminal.css
@@ -1,68 +1,40 @@
 .navbar-container {
-  width: 200px;
+  width: 250px;
   height: 100vh;
   position: fixed;
-  padding: 0%;
-  margin: 0%;
-  border: 0;
   top: 0;
   left: 0;
   background-color: hsla(216, 63%, 57%, 0.8);
- 
-  font-family:  Arial,sans-serif;
-  color: rgb(236, 229, 229);
-  border-top-right-radius: 20px ;
-  border-bottom-right-radius: 20px ;
-  
-  
+  padding: 20px;
+  font-family: "Aclonica";
+  color: black;
 }
 
 .small-image {
-  /* width: 240px;
- height: 240px;
- padding: 0;
- margin-left: 27px;
- margin-right: 0; */
-
- width: 215px;
- height: 240px;
-padding: 0;
-margin-left: 0;
-margin-right: 0;
-
-   
+  width: 240px;
+  height: 240px;
+  margin-left: 47px;
+  margin-top: -50px;
 }
 
 .nav-items {
   margin-bottom: 20px;
-  cursor: pointer;
 }
-
-
 
 .nav-item {
   display: flex;
-  width: 100%;
-  padding-left: 0%;
-  margin-left: 0%;
   align-items: center;
-  padding-top: 15px;
   margin-bottom: 10px;
+  padding: 10px 0;
   cursor: pointer;
-  transition: color 0.3s ease;
 }
 
 .nav-item:hover {
-  color: #363535;  
-  background-color: rgb(197, 213, 235);
-  opacity: 0.5;
- 
+  color: inherit;
 }
 
 .nav-icon {
   margin-right: 20px;
-  margin-left: 20px;
-  padding-bottom: 7px;
 }
 
 .terms,
@@ -74,7 +46,6 @@ margin-right: 0;
 }
 
 .tutors-profile-container {
-  margin-left: 200px;
-  padding: 2% 2% 0 2%;
-  
+  margin-left: 300px;
+  padding: 2% 4% 0 2%;
 }
